--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "recharts": "^2.15.3",
+    "serve": "^14.2.4",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
