--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,13 +1,12 @@
-
-name: Build and Push Docker Image
+name: Docker Build & Push on Devops
 
 on:
   push:
     branches:
-      - devops  
+      - devops
 
 jobs:
-  build-and-push:
+  build-and-push-docker:
     runs-on: ubuntu-latest
 
     steps:
