--- a/.github/workflows/test-master.yml
+++ b/.github/workflows/test-master.yml
@@ -19,7 +19,9 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
+        working-directory: ./client
         run: npm install
 
       - name: Run tests
+        working-directory: ./client
         run: npm test
