--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,18 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@nextui-org/react": "^2.6.11",
+    "@vitest/coverage-v8": "^3.1.3",
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "firebase": "^11.6.0",
+    "jsdom": "^26.1.0",
     "jspdf": "^3.0.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -31,6 +34,7 @@
     "styled-components": "^6.1.18",
     "util": "^0.12.5",
     "uuid": "^11.1.0",
+    "vitest": "^3.1.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -48,15 +52,11 @@
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
-    "babel-jest": "^29.7.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-transform-stub": "^2.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
     "vite": "^6.2.0",
