--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "firebase": "^11.6.0",
     "jsdom": "^26.1.0",
     "jspdf": "^3.0.1",
+    "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dnd": "^16.0.1",
